--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-499.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇩🇪 德国-2.23MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-682.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-2.06MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-647.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-257.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
   - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-499.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
