--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-2.06MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-647.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-257.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
-  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-986.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.46MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-936.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-688.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇬🇧 英国-474.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
 rules:
