--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-986.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.46MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-936.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-688.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-474.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-781.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-463.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-495.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-881.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-626.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇩🇪 德国-986.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-936.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-688.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
