--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-781.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-777.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇫🇷 法国-665.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.82MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-463.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-495.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-881.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-781.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
