--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-777.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇫🇷 法国-665.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.82MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-463.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-495.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-881.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-722.8KB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-626.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2, server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-490.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
